# pythonprac

./: .gitignore
20220913/2/: URLS
20220920/1/: URLS  prog.py
20220920/2/: URLS  prog.py
20220920/3/: URLS  prog.py
20220927/1/: URLS  prog.py
20220927/2/: URLS  prog.py
20220927/3/: URLS  prog.py
20221004/1/: URLS  prog.py
20221004/2/: URLS  prog.py
20221004/3/: URLS  prog.py
20221004/4/: URLS  prog.py
20221011/1/: URLS  prog.py
20221011/2/: prog.py
20221011/3/: URLS  prog.py
20221018/1/: URLS  prog.py
20221018/2/: URLS  prog.py
20221018/3/: URLS  prog.py
20221025/1/: URLS  prog.py
20221025/2/: URLS  prog.py
20221025/3/: URLS  prog.py
20221101/1/: URLS  prog.py
20221101/2/: URLS  prog.py
20221101/3/: URLS  prog.py
20221108/1/: URLS  prog.py
20221108/2/: URLS  prog.py
20221108/3/: URLS  prog.py
20221115/1/: URLS  prog.py
20221115/2/: URLS  prog.py
20221115/3/: URLS  prog.py
20221122/1/: URLS  prog.py
20221122/2/: URLS  prog.py
20221122/3/: URLS  prog.py
20221129/1/: URLS  prog.py
20221129/2/: URLS  prog.py
20221206/1/: prog.py
20230213/1/: prog.py
20230220/: prog.py
20230220/1/: prog.py
20230424/1/moodclient/: mymud.py  pyproject.toml
20230424/1/moodclient/MoodClient.egg-info/: entry_points.txt
20230424/1/moodserver/: pyproject.toml
20230424/1/moodserver/MoodServer.egg-info/: entry_points.txt  top_level.txt
20230424/1/moodserver/moodserver/: dodo.py  server.py
20230424/1/moodserver/moodserver/po/ru/LC_MESSAGES/: server.mo  server.po
mood/: .doit.db.db  Pipfile  test.py
(+201 files in other folders)
