[project]
name = "MoodServer"
version = "0.1"
description = "Server package for MOOD"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "COPYING"}
authors = [
 {name = "Vitaly Sagalevich", email = "vsagalev@gmail.com"}
]

dependencies = ["python-cowsay"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["Sphinx", "build", "coverage", "doit", "flake8", "pydocstyle", "setuptools"]

[tools.setuptools]
Packages = ["moodserver"]

[project.scripts]
StartServer = "moodserver.server:start_server"

[tool.setuptools.package-dir]
moodserver = "moodserver"

[tool.setuptools.package-data]
moodserver = ["po/ru/*/*.mo", "_build/html/index.html"]
